<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0c94e8"
        android:gravity="center_horizontal"
        android:text="注册"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/register_tv_number"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/register_tv_number" />

        <EditText
            android:id="@+id/register_et_number"
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/register_tv_pasword"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/register_tv_pasword" />

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_tv_again_pasword"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="@string/register_tv_again_pasword" />

        <EditText
            android:id="@+id/register_et_again_password"
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_tv_sex"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="7sp"
            android:layout_weight="1"
            android:text="@string/register_tv_sex" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:text="@string/radioButton" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:text="@string/radioButton2" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_tv_age"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_weight="2"
            android:text="@string/register_tv_age" />

        <EditText
            android:id="@+id/register_et_year"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/register_tv_tear"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_tv_year" />

        <EditText
            android:id="@+id/register_et_month"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/register_tv_month"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_tv_month" />

        <EditText
            android:id="@+id/register_et_day"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/register_tv_day"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_tv_day" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120sp"
        android:background="#0c94e8"
        android:text="@string/register_btn" />

</LinearLayout>