<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kaiping"
    android:orientation="vertical"
    tools:context="com.example.chat_program.MainActivity">

    <TextView
        android:id="@+id/text_jinru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="20dp"
        android:text="@string/jianjijinru"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_djs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="20dp"
            android:text="倒计时"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_djs1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="22"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/hao"
        android:textColor="#ff0000"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="40dp"
        android:text="@string/jiu"
        android:textColor="#ff0000"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="40dp"
        android:text="@string/bu"
        android:textColor="#ff0000"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="40dp"
        android:text="@string/jian"
        android:textColor="#ff0000"
        android:textSize="40dp" />

</LinearLayout>
